修改 弹窗点击事件‘true or false’

--- a/web弹出层.html
+++ b/web弹出层.html
@@ -63,10 +63,10 @@ $(function() {
             okBtn: true,
             cancelBtn: true,
             okFn : function(){
-                alert("aaa");
+                alert("true");
             },
             cancelFn : function(){
-                alert("ffff");
+                alert("false");
             }
         });
         return false
