复制 渐变css.html 三次

--- a/渐变css.html
+++ b/渐变css.html
@@ -47,5 +47,11 @@
 	<div id="div1" class="gradient2"></div>
 	<div id="div1" class="gradient3"></div>
 	<div id="div1" class="gradient4"></div>
+	
+	<div id="div1" class="gradient"></div>
+	<div id="div1" class="gradient1"></div>
+	<div id="div1" class="gradient2"></div>
+	<div id="div1" class="gradient3"></div>
+	<div id="div1" class="gradient4"></div>
 </body>
 </html>
